# fishstick

./: .gitattributes  .gitignore  Cargo.toml  README.md  flake.nix  justfile  main.py
hardware/: fishstick-cache.lib  fishstick-rescue.lib  fishstick.kicad_pcb  fishstick.sch  gamecube.lib  sym-lib-table
hardware/fishstick-manufacturing/: fishstick-B_Cu.gbr  fishstick-B_Mask.gbr  fishstick-B_SilkS.gbr  fishstick-Edge_Cuts.gbr  fishstick-F_Cu.gbr  fishstick-F_Mask.gbr  fishstick-F_SilkS.gbr  fishstick-NPTH.drl  fishstick-PTH.drl
hardware/gamecube.pretty/: SOIC-3.kicad_mod
software/: Cargo.toml  rust-toolchain.toml
software/fishstick/: Cargo.toml
software/fishstick-stm32f103/: Cargo.toml
software/fishstick-stm32f103/src/: main.rs
software/fishstick-stm32f4/: Cargo.toml  Embed.toml
software/fishstick-stm32f401/: Cargo.toml  Embed.toml  rust-toolchain.toml
software/fishstick-stm32f401/.cargo/: config.toml
software/fishstick-stm32f401/.openocd/: stlink-stm32f4x.cfg
software/fishstick-stm32f401/src/: gamecube.rs  main.rs
software/fishstick-stm32f401cc/: Cargo.toml
software/fishstick-stm32f411/: Cargo.toml  Embed.toml  rust-toolchain.toml
software/fishstick-stm32f411/.cargo/: config.toml
software/fishstick-stm32f411/src/: main.rs
software/fishstick/src/: lib.rs  main.rs
software/fishstick/src/gamecube/: controller.rs
software/fishstick/src/hid/: report.rs
software/fishstick/src/joybus/: joybus.rs  mod.rs
software/src/: main.rs
software/stm32/: Cargo.toml
