[package]
name = "fishstick-stm32f103"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
nb = "1.0.0"
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103"]

[[bin]]
name = "fishstick-stm32f103"
path = "src/main.rs"
