[package]
name = "fishstick-stm32f401"
version = "0.1.0"
authors = ["rhedgeco"]
edition = "2021"

[dependencies]
embedded-hal = "0.2"
nb = "1.0"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
rtt-target = { version = "0.3", features = ["cortex-m"] }
bitvec = { version = "1.0", default-features = false}
stm32f4xx-hal = { version = "0.13", features = ["rt", "stm32f401"] }

[profile.dev]
lto = "thin"
opt-level = 2

# used for temporarily silencing rust-analyzer error: can't find crate for `test`
[[bin]]
name = "fishstick-stm32f401"
test = false
bench = false
