[package]
name = "fishstick-stm32f401"
version = "0.1.0"
authors = ["rhedgeco"]
edition = "2021"

# used for temporarily silencing rust-analyzer error: can't find crate for `test`
[[bin]]
name = "fishstick-stm32f401"
test = false
bench = false

[dependencies]
embedded-hal = "0.2.7"
nb = "1.1.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[dependencies.bitvec]
version = "1.0"
default-features = false
features = []

[dependencies.stm32f4xx-hal]
version = "0.16.0"
features = ["rt", "stm32f401"]
