[package]
name = "fishstick-stm32f401"
version = "0.1.0"
authors = ["rhedgeco"]
edition = "2021"

# used for temporarily silencing rust-analyzer error: can't find crate for `test`
[[bin]]
name = "fishstick-stm32f401"
test = false
bench = false

[dependencies]
embedded-hal = "*"
nb = "*"
cortex-m = "*"
cortex-m-rt = "*"
panic-rtt-target = { version = "*", features = ["cortex-m"] }
rtt-target = { version = "*", features = ["cortex-m"] }

[dependencies.bitvec]
version = "*"
default-features = false
features = []

[dependencies.stm32f4xx-hal]
version = "*"
features = ["rt", "stm32f401"]
