[package]
name = "fishstick-stm32f411"
version = "0.1.0"
authors = ["rhedgeco"]
edition = "2021"

# used for temporarily silencing rust-analyzer error: can't find crate for `test`
[[bin]]
name = "fishstick-stm32f411"
test = false
bench = false

[dependencies]
cortex-m-rt = "*"
embedded-hal = "*"
defmt = "*"
# https://ferrous-systems.com/blog/defmt-rtt-linker-error/
defmt-rtt = ">=0.4"
nb = "*"
panic-rtt-target = { version = "*", features = ["cortex-m"] }
rtt-target = { version = "*", features = ["cortex-m"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
usb-device = "*"
usbd-serial = "*"
stm32-usbd = "*"
usbd-hid = "*"

[dependencies.bitvec]
version = "*"
default-features = false
features = []

[dependencies.cortex-m]
version = "*"
features = [
    # https://ferrous-systems.com/blog/defmt-rtt-linker-error/
    "critical-section-single-core",
]

[dependencies.heapless]
version = "*"
default-features = false
features = []

[dependencies.panic-probe]
version = "*"
features = ["print-defmt"]

[dependencies.stm32f4xx-hal]
version = "*"
features = ["rt", "stm32f411", "usb_fs"]
