[package]
name = "fishstick-stm32f411"
version = "0.1.0"
authors = ["rhedgeco"]
edition = "2021"

# used for temporarily silencing rust-analyzer error: can't find crate for `test`
[[bin]]
name = "fishstick-stm32f411"
test = false
bench = false

[dependencies]
cortex-m-rt = "*"
embedded-hal = "*"
defmt = "*"
# https://ferrous-systems.com/blog/defmt-rtt-linker-error/
defmt-rtt = ">=0.4"
nb = "*"
panic-rtt-target = { version = "*", features = ["cortex-m"] }
rtt-target = { version = "*", features = ["cortex-m"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }

[dependencies.bitvec]
version = "*"
default-features = false
features = []

[dependencies.cortex-m]
version = "*"
features = [
    # https://ferrous-systems.com/blog/defmt-rtt-linker-error/
    "critical-section-single-core",
]

[dependencies.embassy-executor]
version = "*"
features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"]

[dependencies.embassy-stm32]
version = "*"
features = ["defmt", "memory-x", "stm32f411ce", "time-driver-any"]

[dependencies.embassy-time]
version = "*"
features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]

[dependencies.embassy-usb]
git = "https://github.com/embassy-rs/embassy"
features = ["defmt"]

[dependencies.heapless]
version = "*"
default-features = false
features = []

[dependencies.panic-probe]
version = "*"
features = ["print-defmt"]

[dependencies.stm32f4xx-hal]
version = "*"
features = ["rt", "stm32f411"]
