[package]
name = "fishstick"
version = "0.1.0"
authors = ["ignormies"]
edition = "2021"

[dependencies]
nb = "*"
cortex-m = "*"
cortex-m-rt = "*"
panic-halt = "*"

[dependencies.bitvec]
version = "*"
default-features = false
features = []

[dependencies.embedded-hal]
version = "*"
features = ["unproven"]
