[package]
name = "fishstick"
version = "0.1.0"
authors = ["ignormies", "rhedgeco"]
edition = "2024"

[dependencies]
nb = "*"
cortex-m = "*"
cortex-m-rt = "*"
panic-halt = "*"

[dependencies.bitvec]
version = "*"
default-features = false
features = []

[dependencies.embedded-hal]
version = "*"
features = ["unproven"]
